#sprint_3 Add final readme. Fixes for kafka working

--- a/device_management/src/main/resources/application.properties
+++ b/device_management/src/main/resources/application.properties
@@ -5,8 +5,17 @@ spring.flyway.password=your_password
 
 server.port=8081
 
-logging.level.root=debug
+logging.level.root=info
 
 devices.datasource.jdbc-url=jdbc:postgresql://localhost:5432/smart_home
 devices.datasource.username=your_username
 devices.datasource.password=your_password
+
+spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.consumer.group-id="device_register"
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
+spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
