--- a/telemetry.env
+++ b/telemetry.env
@@ -4,12 +4,14 @@ spring.flyway.user=username
 spring.flyway.password=password
 spring.flyway.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
 spring.flyway.default-schema=smart_home
-
 server.port=8082
-
-logging.level.root=debug
-
 telemetry.datasource.jdbc-url=jdbc:clickhouse://clickhouse:8123/smart_home
 telemetry.datasource.driverClassName=com.clickhouse.jdbc.ClickHouseDriver
-telemetry.datasource.username=username
-telemetry.datasource.password=password
+telemetry_datasource_username=username
+telemetry_datasource_password=password
+spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.consumer.group-id="telemetry"
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
