--- a/telemetry/src/main/resources/application.properties
+++ b/telemetry/src/main/resources/application.properties
@@ -13,3 +13,10 @@ telemetry.datasource.jdbc-url=jdbc:clickhouse://localhost:8123/smart_home
 telemetry.datasource.driverClassName=com.clickhouse.jdbc.ClickHouseDriver
 telemetry.datasource.username=username
 telemetry.datasource.password=password
+
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.consumer.group-id="telemetry"
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
