--- a/device_management.env
+++ b/device_management.env
@@ -2,7 +2,12 @@ spring.flyway.url=jdbc:postgresql://postgres:5432/smart_home
 spring.flyway.user=your_username
 spring.flyway.password=your_password
 server.port=8081
-logging.level.root=debug
 devices.datasource.jdbc-url=jdbc:postgresql://postgres:5432/smart_home
-devices.datasource.username=your_username
-devices.datasource.password=your_password
+devices_datasource_username=your_username
+devices_datasource_password=your_password
+spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.consumer.group-id="device_register"
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
