--- a/telemetry/build.gradle
+++ b/telemetry/build.gradle
@@ -26,6 +26,10 @@ bootJar {
 	layered.enabled = false
 }
 
+jar {
+	enabled = false
+}
+
 dependencies {
 	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
