--- a/device_management/build.gradle
+++ b/device_management/build.gradle
@@ -26,6 +26,10 @@ bootJar {
 	layered.enabled = false
 }
 
+jar {
+	enabled = false
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
